--- a/app/static/less/theme_components/bars.less
+++ b/app/static/less/theme_components/bars.less
@@ -59,7 +59,7 @@
 			}
 		}
 		.bar__module{
-			margin-bottom: @base-line-height;
+			//margin-bottom: @base-line-height;
 		}
 		.row{
 			div[class*='col-']{
